Fix integration tests issues